[General] add .editorconfig, align text and icons in sidebar, fix sidebar shadow, sidebar css clean up (#1105)
* [General] add .editorconfig, align text and icons in sidebar, fix sidebar shadow, sidebar css clean up

--- a/src/components/UI/Header/index.css
+++ b/src/components/UI/Header/index.css
@@ -9,7 +9,7 @@
   align-items: center;
   margin: 0 32px;
   padding: 15px 0;
-  background: var(--background-color);
+  background: var(--background-shadow);
   color: var(--text-secondary);
 }
 @media (max-width: 1400px) {
